--- a/frontend/src/pages/Navbar.css
+++ b/frontend/src/pages/Navbar.css
@@ -1,20 +1,95 @@
 .navbar {
     background: linear-gradient(to bottom, #af67db, #ff7f50);
-    padding: 20px;
-    border-radius: 20px;
-  }
-  
-  .navbar a {
-    color: black;
-    font-size: large;
-    font-weight: 700;
-    text-decoration: none;
     padding: 10px;
-  }
-  
-  .navbar a:hover {
-    color: #000;
-    background-color: #fff;
     border-radius: 10px;
+    text-align: right;
+
+    .container {
+      padding: 10px 0px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .logo {
+
+      .imgLogoLink {
+        margin-right: 10px;
+        transition: transform 0.3s ease-in-out;
+        background-color: black;
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .imgLogoLink:hover {
+        width: 55px;
+        height: 55px;
+        margin-right: px;
+        transform: scale(1.1); 
+        background-color: #fff;
+        border-radius: 50px;
+      }
+      
+      .imgLogo {
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
+        
+      }
+    }
+    .links{
+      display: flex;
+      gap: 10px;
+
+      .link {
+        color: black;
+        font-size: large;
+        font-weight: 700;
+        text-decoration: none;
+        padding: 10px 10px;
+      }
+      
+      .link:hover {
+        color: #000;
+        background-color: #fff;
+        border-radius: 10px;
+      }
+
+      .imgProfileLink {
+        margin-right: 10px;
+        transition: transform 0.3s ease-in-out;
+        background-color: black;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .imgProfileLink:hover {
+        width: 40px;
+        height: 40px;
+        margin-right: px;
+        transform: scale(1.1); 
+        background-color: #fff;
+        border-radius: 50px;
+      }
+      
+      .imgProfile {
+        width: 35px;
+        height: 35px;
+        border-radius: 50px;
+        
+      }
+
+    }
   }
+
+  
+  
+  
   
